# wavescope

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  build.rs  prompt.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
packaging/macos/: Info.plist
src/: analysis.rs  app.rs  audio.rs  colormap.rs  cuda.rs  cwt.rs  gpu.rs  kernel.cu  main.rs  wavelet.rs
timestamps/: README.md  v0.1.3.commit  v0.1.3.commit.ots
