[package]
name = "wavescope"
version = "0.2.1"
edition = "2021"
license = "MIT"

[dependencies]
hound = "3"
claxon = "0.4"
eframe = { version = "0.28", features = ["default"] }
egui = "0.28"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rfd = "0.14"
wgpu = "0.20"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
